--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\dell\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.4
-executable = C:\Users\dell\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\dell\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\dell\StudioProjects\map-insight-backend\env
+executable = C:\Users\dell\StudioProjects\map-insight-backend\env\Scripts\python.exe
+command = C:\Users\dell\StudioProjects\map-insight-backend\env\Scripts\python.exe -m venv C:\Users\dell\StudioProjects\map-insight-backend\env
