--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ whitenoise==6.7.0
 djangorestframework==3.15.2
 drf-yasg==1.21.7
 django-filter==24.3.0
+django_extensions==3.2.3
+django-cors-headers==4.4.0
