--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ drf-yasg==1.21.7
 django-filter==24.3.0
 django_extensions==3.2.3
 django-cors-headers==4.4.0
+# setuptools==74.0.0
+# psycopg2==2.9.9
